--- a/rest-api/src/main/res/layout/activity_second.xml
+++ b/rest-api/src/main/res/layout/activity_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android_basic_app_tutorial.SecondActivity">
+    tools:context="com.example.rest_api.SecondActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="409dp"
@@ -31,3 +31,4 @@
             tools:layout_editor_absoluteY="436dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
