--- a/rest-api/src/main/res/layout/activity_second.xml
+++ b/rest-api/src/main/res/layout/activity_second.xml
@@ -6,6 +6,48 @@
     android:layout_height="match_parent"
     tools:context="com.example.rest_api.SecondActivity">
 
+    <ScrollView
+        android:id="@+id/nestedScrollView"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="100dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_view_result_nbp"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="100dp"
+                android:textColor="#EB1010"
+                android:textStyle="bold"
+                tools:layout_conversion_absoluteHeight="19dp"
+                tools:layout_conversion_absoluteWidth="0dp"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="0dp" />
+
+            <TextView
+                android:id="@+id/text_view_result_nbp_right"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                tools:layout_conversion_absoluteHeight="19dp"
+                tools:layout_conversion_absoluteWidth="0dp"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="0dp" />
+
+        </LinearLayout>
+
+
+    </ScrollView>
+
+
+
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
@@ -30,24 +72,6 @@
         app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
         app:layout_constraintVertical_bias="0.519" />
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <TextView
-            android:id="@+id/text_view_result_nbp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            tools:layout_conversion_absoluteHeight="19dp"
-            tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_conversion_absoluteWidth="0dp" />
-
-    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
