--- a/rest-api/src/main/res/layout/activity_main.xml
+++ b/rest-api/src/main/res/layout/activity_main.xml
@@ -7,12 +7,27 @@ android:layout_height="match_parent"
 tools:context="com.example.rest_api.MainActivity">
 
     <Button
+        android:id="@+id/converter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:layout_marginBottom="24dp"
+        android:text="converter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button1"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Go to currancies rates"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.797"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -40,9 +55,9 @@ tools:context="com.example.rest_api.MainActivity">
             android:layout_height="wrap_content"
             android:textColor="#000"
             tools:layout_conversion_absoluteHeight="19dp"
-            tools:layout_editor_absoluteY="0dp"
+            tools:layout_conversion_absoluteWidth="0dp"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_conversion_absoluteWidth="0dp" />
+            tools:layout_editor_absoluteY="0dp" />
 
     </androidx.core.widget.NestedScrollView>
 
