--- a/rest-api/src/main/res/layout/converter_activity.xml
+++ b/rest-api/src/main/res/layout/converter_activity.xml
@@ -44,13 +44,13 @@
             android:layout_height="125dp"
             android:entries="@array/to_currency_arrays" />
 
-        <EditText
-            android:id="@+id/to_amount"
+        <TextView
+            android:id="@+id/result"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="75dp"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="numberDecimal" />
+            android:text="TextView"
+            android:textSize="18sp" />
     </LinearLayout>
 
     <Button
