--- a/rest-api/src/main/res/layout/activity_second.xml
+++ b/rest-api/src/main/res/layout/activity_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rest_api.SecondActivity">
+    tools:context="com.example.rest_api.RatesActivity">
 
     <ScrollView
         android:id="@+id/nestedScrollView"
