--- a/rest-api/src/main/res/layout/converter_activity.xml
+++ b/rest-api/src/main/res/layout/converter_activity.xml
@@ -6,11 +6,13 @@
     android:orientation="vertical"
     tools:context="com.example.rest_api.ConverterActivity">
 
-    <TextView
-        android:id="@+id/textView2"
+    <EditText
+        android:id="@+id/editText2"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="TextView" />
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,10 +56,16 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnSubmit"
+        android:id="@+id/btn_converter_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Submit" />
+
+    <Button
+        android:id="@+id/btn_check_chart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="check currency chart" />
 
 
 </LinearLayout>
